# GolemLinux

./: .gdbinit  .gitignore  Cargo.toml  GOLEM_PHASE1_BUILD_NOTES.md  GOLEM_RUNTIME_ARCHITECTURE.md  README.md
.cargo/: config.toml
docs/: APPLE_EFI_NOTES.md  BARE_METAL_BOOT.md  PHASE6_BARE_METAL.md  SAFE_MODE.md
examples/: golem_agent.py  golem_degradation_scenarios.py
scripts/: build_image.sh  build_safemode_image.sh  debug_qemu.sh  flash_usb.sh  run_phase4_demo.sh  run_qemu.sh  run_safemode.sh  verify_boot.sh
src/: main.rs
src/boot/: README.md  boot.asm  linker.ld
src/drivers/: cpuid.rs  mod.rs
src/fs/: README.md  mod.rs  ramfs.rs  vfs.rs
src/memory/: README.md  allocator.rs  heap.rs  mod.rs  paging.rs
src/safemode/: main.rs  mod.rs  sentinel_config.rs
src/scheduler/: README.md  context.rs  mod.rs  process.rs  scheduler.rs
src/sentinel/: README.md  audit.rs  handshake.rs  invisible.rs  ipc.rs  migration.rs  mod.rs  monitor.rs
src/syscall/: README.md  dispatch.rs  entry.asm  entry.rs  handlers.rs  mod.rs
