[package]
name = "gkern"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gkern-safemode"
path = "src/safemode/main.rs"
# Safe Mode is its own compile-time posture (see `sentinel-safemode` below). This
# binary is only meaningful — and is only built — when that feature is selected:
#
#   cargo build --features sentinel-safemode --bin gkern-safemode
#
# Gating it here keeps the main-kernel builds (`--features sentinel-enforcer` /
# `sentinel-observer`) from also trying to compile the Safe Mode binary, which
# pulls in an unrelated module surface and has nothing to do with the enforcer/
# observer posture split.
required-features = ["sentinel-safemode"]

# --- Dependencies ----------------------------------------------------------
# Only one external crate is used anywhere in the tree: `spin`, pulled in by
# the filesystem subsystem (src/fs/ramfs.rs, src/fs/vfs.rs -> `use spin::Mutex`).
# The memory subsystem ships its own internal SpinMutex and needs nothing here.
# `default-features = false` keeps spin no_std-clean (no std-dependent features).
# Only `spin::Mutex` is used anywhere (src/fs/vfs.rs, src/fs/ramfs.rs), which the
# `spin_mutex` feature provides (it transitively enables `mutex`). We deliberately
# do NOT enable spin's `lock_api` feature: it pulls in the `lock_api` crate, which
# depends on `scopeguard`, which is not no_std-compatible and breaks the
# x86_64-unknown-none build. No code uses the lock_api-based wrappers.
[dependencies]
spin = { version = "0.9", default-features = false, features = ["spin_mutex"] }

# --- Features ---------------------------------------------------------------
# `sentinel-safemode` is the COMPILE-TIME selector for the Safe Mode recovery
# kernel. It carries no dependencies and no code of its own — it is a pure
# build-level flag that flips `sentinel::invisible::SAFE_MODE_ACTIVE` from
# `false` (main OS, `gkern`) to `true` (`gkern-safemode`). With the flag set,
# Sentinel's configuration interface (ReadAudit + Configure) is reachable from
# the agent-free Safe Mode serial terminal; without it, that interface is not
# compiled into the binary at all and every config query is denied.
#
# This is a property of the BINARY's feature set, not a runtime variable: no
# userspace process, Agent, or Operator can enable it. Build the two kernels as:
#
#   cargo build --bin gkern                                    # main OS, invisible
#   cargo build --features sentinel-safemode --bin gkern-safemode   # Safe Mode
#
# Mirrors the sentinel-enforcer / sentinel-observer compile-time split: the
# capability is absent from the wrong build, not merely refused at runtime.
[features]
sentinel-safemode = []

# --- v3 capability split (Agent 7) ------------------------------------------
# Exactly one of these MUST be selected for the main kernel (`gkern`) to
# compile. They are mutually exclusive, enforced at compile time in
# `src/sentinel/mod.rs` (both -> compile_error!, neither -> compile_error!).
# The capability is a property of the binary's feature set: the Enforcer's
# machinery is not compiled into an observer build, and vice versa.
#
#   cargo build --features sentinel-enforcer --bin gkern   # active enforcement
#   cargo build --features sentinel-observer --bin gkern   # watch-only, logs
#
# This changes the canonical main-OS build invocation: a feature-free
# `cargo build` is now a deliberate compile error (a Sentinel kernel with no
# declared posture is not a valid build).
sentinel-enforcer = []
sentinel-observer = []

# --- Release profile: bare-metal deployment (Phase 6, Agent 5) --------------
# The kernel image is loaded and executed directly off the boot medium, before
# paging or any allocator is up, so a smaller binary measurably shortens load
# time and shrinks the resident footprint. We therefore optimize the release
# build for SIZE, not raw throughput, and strip everything the running kernel
# does not need.
#
#   opt-level = "z"   size-optimized codegen (smaller image boots faster) —
#                     replaces the previous speed-tuned opt-level = 3.
#   lto = true        whole-program LTO: cross-crate inlining + dead-code removal.
#   panic = "abort"   a no_std kernel cannot unwind; abort is the only valid
#                     strategy and dropping the landing pads shrinks the binary.
#   codegen-units=1   a single codegen unit lets LTO see the whole program at
#                     once, producing tighter, smaller output.
#   strip = true      remove debug info and the symbol table from the release
#                     binary (the kernel carries no symbolizer; symbols are dead
#                     weight on the boot medium).
#
# Measured impact (cargo build [--release] --features sentinel-enforcer
# --target x86_64-unknown-none --bin gkern), ELF on-disk size of
# target/x86_64-unknown-none/{debug,release}/gkern:
#
#   debug   build                     : 4,186,400 bytes  (~3.99 MiB)  unstripped
#   release build (THIS profile)      : 1,102,248 bytes  (~1.05 MiB)  stripped
#                                       => 3.8x smaller than debug  (REQUIRED ✓)
#
# Before/after of switching the release profile to size-optimized + strip
# (same release build, prior profile = opt-level 3 with no strip):
#
#   release before (opt=3, unstripped) : 1,139,680 bytes  (~1.11 MiB)
#   release after  (opt="z", stripped) : 1,102,248 bytes  (~1.05 MiB)
#                                        => 37,432 bytes (~3.3%) smaller
#
# The release image is far smaller than the debug image, as required for bare
# metal. (Numbers measured 2026-06-10; re-run the two builds to refresh.)
#
# NOTE on version embedding: a build.rs was evaluated and deliberately NOT
# added. The kernel does not consume any build-time `env!` variable (the serial
# banner in src/main.rs is a literal and Cargo already exposes the package
# version via CARGO_PKG_VERSION), so a build.rs emitting `cargo:rustc-env`
# values would be inert dead weight — it cannot embed anything into this binary
# without a corresponding source change, which is outside this task's scope.
[profile.release]
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
strip = true

[profile.dev]
panic = "abort"
